feat(finanzas): implementar mapeo de Transaccion, scripts SQL y endpoints REST